--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "homepage": "https://github.com/LewisTehMinerz/hotspring#readme",
   "devDependencies": {
     "cz-conventional-changelog": "^2.1.0",
+    "eslint": "^4.19.1",
+    "mocha": "^5.0.5",
     "semantic-release": "^15.1.5"
   },
   "config": {
