ci(circleci): Add linting as a required workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,12 @@ workflows:
     test-and-deploy:
       jobs:
         - prep
-        - json:
+        - lint:
             requires:
               - prep
+        - json:
+            requires:
+              - lint
         - semantic-release:
             requires:
               - json
