--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha",
+    "lint": "node_modules/.bin/eslint .",
     "semantic-release": "semantic-release"
   },
   "repository": {
