--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,9 @@ jobs:
           name: Install packages
           command: npm install
       - save_cache:
-          keys:
-            - npm-deps{{ checksum "package.json" }}
+          key: npm-deps{{ checksum "package.json" }}
+          paths:
+            - node_modules
 
   lint:
     docker:
