--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/LewisTehMinerz/hotspring#readme",
   "devDependencies": {
     "cz-conventional-changelog": "^2.1.0",
+    "debug": "^3.1.0",
     "eslint": "^4.19.1",
     "mocha": "^5.0.5",
-    "semantic-release": "^15.1.5"
+    "semantic-release": "^15.1.5",
+    "supports-color": "^5.3.0"
   },
   "config": {
     "commitizen": {
