ci(circleci): JSON test now runs command `npm run test tests/json`
Makes it easier to copy/paste and edit a couple lines of configuration without having to add a
completely new script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
             - npm-deps-
       - run:
           name: Run test [JSON]
-          command: npm run test-json
+          command: npm run test tests/json
 
   semantic-release:
     docker:
