--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "node_modules/.bin/mocha",
     "lint": "node_modules/.bin/eslint .",
+    "docs": "node_modules/.bin/jsdoc -r . -c jsdoc.json && mv out docs",
     "semantic-release": "semantic-release"
   },
   "repository": {
@@ -25,6 +26,8 @@
     "cz-conventional-changelog": "^2.1.0",
     "debug": "^3.1.0",
     "eslint": "^4.19.1",
+    "jsdoc": "^3.5.5",
+    "minami": "^1.2.3",
     "mocha": "^5.0.5",
     "semantic-release": "^15.1.5",
     "supports-color": "^5.3.0"
